...

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout
            android:id="@+id/library_book_frame"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
...
                    android:layout_margin="16dp"
                    android:layout_marginBottom="4dp"
                    android:contentDescription="@string/handoff_book"
                    android:visibility="@{viewModel.showHandoffButton()? View.VISIBLE : View.GONE}"
                    app:backgroundTint="@color/colorAccent"
                    app:layout_constraintBottom_toBottomOf="@+id/bookImageButton"
                    app:layout_constraintEnd_toStartOf="@+id/edit_book"
                    app:layout_constraintTop_toBottomOf="@+id/bookImageButton"
                    app:srcCompat="@drawable/ic_baseline_swap_vert_24" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/edit_book"
                    android:layout_width="wrap_content"
...
                    android:layout_margin="16dp"
                    android:layout_marginBottom="4dp"
                    android:contentDescription="@string/edit_book_fab_description"
                    android:onClick="@{()->viewModel.editCurrentBook()}"
                    app:backgroundTint="@color/colorAccent"
                    app:layout_constraintBottom_toBottomOf="@+id/bookImageButton"
                    app:layout_constraintEnd_toStartOf="@+id/delete_book"
                    app:layout_constraintTop_toBottomOf="@+id/bookImageButton"
                    app:srcCompat="@drawable/ic_baseline_edit_24" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/delete_book"
                    android:layout_width="wrap_content"
...
                    app:layout_constraintBottom_toBottomOf="@+id/bookImageButton"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/bookImageButton"
                    app:srcCompat="@drawable/ic_baseline_delete_24" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/text_margin"
                    android:layout_marginTop="16dp"
                    android:text="@string/title"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Overline"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/bookImageButton" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/text_margin"
                    android:layout_marginTop="8dp"
                    android:text="@{viewModel.currentBook.title}"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView6" />

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/text_margin"
                    android:layout_marginTop="16dp"
                    android:text="@string/author"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Overline"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView7" />

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/text_margin"
                    android:layout_marginTop="8dp"
                    android:text="@{viewModel.currentBook.author}"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView8" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/text_margin"
                    android:layout_marginTop="16dp"
                    android:text="@string/isbn"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Overline"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView9" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/text_margin"
                    android:layout_marginTop="8dp"
                    android:text="@{viewModel.currentBook.isbn}"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
...
                    android:text="@string/request_status"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Overline"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView5" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="@dimen/text_margin"
                    android:layout_marginTop="4dp"
...
