...
            app:layout_constraintBottom_toBottomOf="@+id/bookImage"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bookImage"
            app:srcCompat="@drawable/ic_baseline_delete_24" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/add_book_photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="4dp"
            android:contentDescription="@string/add_photo_of_book"
...
            app:srcCompat="@drawable/ic_baseline_photo_camera_24" />
        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/auto_fill_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:contentDescription="Button to auto-fill fields"
            android:text="Auto-fill"
            app:backgroundTint="@color/colorAccent"
            app:icon="@drawable/ic_baseline_qr_code_scanner_24"
            app:layout_constraintBottom_toBottomOf="@+id/bookImage"
            app:layout_constraintEnd_toStartOf="@+id/add_book_photo"
            app:layout_constraintTop_toBottomOf="@+id/bookImage" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/book_title_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/title_hint"
...
                android:singleLine="true"
                android:text="@={viewModel.currentBook.title}" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/book_author_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:hint="@string/author_hint"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
...
                android:text="@={viewModel.currentBook.author}" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/book_isbn_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:hint="@string/isbn_hint"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
...
